date filter in openapi
