# search/src/main/resources/api.yml
@@ -22,6 +22,20 @@ paths:
           description: Page number
           schema:
             type: integer
+        - name: start-date
+          in: query
+          description: filter the results by date
+          schema:
+            type: string
+            format: date
+          example: "2003-06-11"
+        - name: end-date
+          in: query
+          description: filter the results by date
+          schema:
+            type: string
+            format: date
+          example: "2003-06-11"
       responses:
         200:
           description: OK
